Add context to Item - have the shopping list name at the top of the page

--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/CreateItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/CreateItem.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "CreateItem";
 }
 
-<h2>Add Item</h2>
+<h2>@Model.GetShoppingListName(int.Parse(Url.RequestContext.RouteData.Values["id"].ToString()))</h2>
 
 
 @using (Html.BeginForm())
