--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/DeleteItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/DeleteItem.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "DeleteItem";
 }
 
-<h2>Delete</h2>
+<h2>@Model.ShoppingListName</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
