Handle Image Uploading in Create and Delete Item

--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "EditItem";
 }
 
-<h2>@Model.ShoppingListName</h2>
+<h2>Edit @Model.Content Item in @Model.ShoppingListName</h2>
 
 @using (Html.BeginForm())
 {
