--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListNote/DeleteNote.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListNote/DeleteNote.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "DeleteNote";
 }
 
-<h2>Delete Note</h2>
+<h2>Delete Note in @Model.ItemContent</h2>
 <div>
     <h4>Are you sure you want to delete this note?</h4>
     <hr />
