--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/CreateItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/CreateItem.cshtml
@@ -4,13 +4,14 @@
     ViewBag.Title = "CreateItem";
 }
 
-<h2>@Model.GetShoppingListName(int.Parse(Url.RequestContext.RouteData.Values["id"].ToString()))</h2>
+<h2>Create Item for @Model.GetShoppingListName(int.Parse(Url.RequestContext.RouteData.Values["id"].ToString())) Shopping List</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateItem", "ShoppingListItem", FormMethod.Post,
+                new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-
+    @Html.ValidationSummary()
     <div class="form-horizontal">
         <h4>List Item</h4>
         <hr />
@@ -18,6 +19,13 @@
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Image", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBox("File", "", new { @class = "form-control-static", @type = "file"})
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
