--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListNote/CreateNote.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListNote/CreateNote.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "CreateNote";
 }
 
-<h2>Create Note</h2>
+<h2>Create Note for @Model.GetItemtContent(int.Parse(Url.RequestContext.RouteData.Values["id"].ToString()) Item)</h2>
 
 @using (Html.BeginForm())
 {
