--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Edit @Model.Content Item in @Model.ShoppingListName</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditItem", "ShoppingListItem", FormMethod.Post,
+                new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.ItemId)
@@ -20,6 +21,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Image", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBox("File", "", new { @class = "form-control-static", @type = "file" })
             </div>
         </div>
 
