--- a/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
+++ b/ShoppingList.Web/ShoppingList.Web/Views/ShoppingListItem/EditItem.cshtml
@@ -53,57 +53,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript">
-        var validFilesTypes = ["BMP", "GIF", "PNG", "JPG", "JPEG"];
-
-        function CheckExtension(file) {
-            /*global document: false */
-            var filePath = file.value;
-            var ext = filePath.substring(filePath.lastIndexOf('.') + 1).toUpperCase();
-            var isValidFile = false;
-
-            for (var i = 0; i < validFilesTypes.length; i++) {
-                if (ext == validFilesTypes[i]) {
-                    isValidFile = true;
-                    break;
-                }
-            }
-
-            if (!isValidFile) {
-                file.value = null;
-                alert("Invalid Image File. You are only allowed to upload a " + validFilesTypes.join(", ") + " file.");
-            }
-
-            return isValidFile;
-        }
-    </script>
-
-    <script type="text/javascript">
-            var validFileSize = 4 * 1024 * 1024;
-
-            function CheckFileSize(file) {
-                /*global document: false */
-                var fileSize = file.files[0].size;
-                var isValidFile = false;
-                if (fileSize !== 0 && fileSize <= validFileSize) {
-                    isValidFile = true;
-                }
-                else {
-                    file.value = null;
-                    alert("The image size cannot exceed 4 MB and cannot be 0.");
-                }
-                return isValidFile;
-            }
-    </script>
-
-    <script type="text/javascript">
-            function CheckFile(file) {
-                var isValidFile = CheckExtension(file);
-
-                if (isValidFile)
-                    isValidFile = CheckFileSize(file);
-
-                return isValidFile;
-            }
-    </script>
+    @Scripts.Render("~/Content/CheckFile.js")
 }
